# prayer-room-api

./: Dockerfile  LICENSE  Procfile  README.md  app.json  entrypoint  justfile  manage.py  pyproject.toml
.github/workflows/: ci-staging.yml  ci.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
data/: Home Page Content-Grid view.csv  Prayer Inspiration-Grid view.csv  Settings-Grid view.csv
prayer_room_api/: adapters.py  admin.py  apps.py  asgi.py  celery.py  forms.py  models.py  money_patch.py  resources.py  serializers.py  settings.py  signals.py  tasks.py  urls.py  views.py  wsgi.py
prayer_room_api/migrations/: 0001_initial.py  0002_alter_prayerpraiserequest_created_at.py  0003_remix_user.py  0004_setting.py  0005_alter_prayerpraiserequest_name.py  0006_alter_prayerpraiserequest_name.py  0007_prayerpraiserequest_response_comment.py  0008_userprofile.py  0009_bannedword.py  0009_prayerpraiserequest_created_by.py  0010_prayerpraiserequest_approved_at.py  0010_rename_enable_repsonse_notifications_userprofile_enable_response_notifications.py  0011_existing_approved_prayers.py  0012_alter_bannedword_auto_action.py  0013_rename_enable_repsonse_notifications_userprofile_enable_response_notifications_and_more.py  0014_email_templates.py  0015_seed_email_templates.py  0016_create_celery_beat_schedules.py  0017_location_is_active.py  0018_prayerresource.py  0019_prayerresource_section_and_more.py  0020_prayerpraiserequest_response_skipped_at.py
prayer_room_api/templates/: base.html
prayer_room_api/tests/: test_email_templates.py  (+4 more)
(+44 files in other folders)
